; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/extr_ftp.c_Login.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/extr_ftp.c_Login.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_24__ = type { i64, %struct.TYPE_20__, i32*, %struct.TYPE_21__ }
%struct.TYPE_20__ = type { i32 }
%struct.TYPE_21__ = type { i32, i32 }
%struct.TYPE_22__ = type { i32 }
%struct.TYPE_23__ = type { i8*, i32 }

@.str = private unnamed_addr constant [18 x i8] c"connection failed\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Network interaction failed\00", align 1
@.str.2 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.3 = private unnamed_addr constant [45 x i8] c"VLC could not connect with the given server.\00", align 1
@IMPLICIT = common dso_local global i64 0, align 8
@.str.4 = private unnamed_addr constant [5 x i8] c"ftps\00", align 1
@.str.5 = private unnamed_addr constant [20 x i8] c"connection rejected\00", align 1
@.str.6 = private unnamed_addr constant [51 x i8] c"VLC's connection to the given server was rejected.\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"connection accepted (%d)\00", align 1
@.str.8 = private unnamed_addr constant [5 x i8] c"FEAT\00", align 1
@FeaturesCheck = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [27 x i8] c"cannot get server features\00", align 1
@EXPLICIT = common dso_local global i64 0, align 8
@.str.10 = private unnamed_addr constant [28 x i8] c"Server does not support TLS\00", align 1
@.str.11 = private unnamed_addr constant [9 x i8] c"AUTH TLS\00", align 1
@.str.12 = private unnamed_addr constant [50 x i8] c"cannot switch to TLS: server replied with code %d\00", align 1
@.str.13 = private unnamed_addr constant [6 x i8] c"ftpes\00", align 1
@NONE = common dso_local global i64 0, align 8
@.str.14 = private unnamed_addr constant [7 x i8] c"PBSZ 0\00", align 1
@.str.15 = private unnamed_addr constant [46 x i8] c"Can't truncate Protection buffer size for TLS\00", align 1
@.str.16 = private unnamed_addr constant [7 x i8] c"PROT P\00", align 1
@.str.17 = private unnamed_addr constant [34 x i8] c"Can't set Data channel protection\00", align 1
@.str.18 = private unnamed_addr constant [9 x i8] c"ftp-user\00", align 1
@.str.19 = private unnamed_addr constant [8 x i8] c"ftp-pwd\00", align 1
@.str.20 = private unnamed_addr constant [10 x i8] c"anonymous\00", align 1
@LOGIN_DIALOG_TITLE = common dso_local global i32 0, align 4
@LOGIN_DIALOG_TEXT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_24__*, i8*)* @Login to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Login(i32* %0, %struct.TYPE_24__* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_24__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_22__, align 4
  %10 = alloca %struct.TYPE_23__, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_24__* %1, %struct.TYPE_24__** %6, align 8
  store i8* %2, i8** %7, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %14, i32 0, i32 3
  %16 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %18, i32 0, i32 3
  %20 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32* @vlc_tls_SocketOpenTCP(i32* %13, i32 %17, i32 %21)
  %23 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %24 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %23, i32 0, i32 2
  store i32* %22, i32** %24, align 8
  %25 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %25, i32 0, i32 2
  %27 = load i32*, i32** %26, align 8
  %28 = icmp eq i32* %27, null
  br i1 %28, label %29, label %36

29:                                               ; preds = %3
  %30 = load i32*, i32** %5, align 8
  %31 = call i32 (i32*, i8*, ...) @msg_Err(i32* %30, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %34 = call i32 @_(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.3, i64 0, i64 0))
  %35 = call i32 @vlc_dialog_display_error(i32* %32, i32 %33, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 %34)
  br label %212

36:                                               ; preds = %3
  %37 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @IMPLICIT, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %49

42:                                               ; preds = %36
  %43 = load i32*, i32** %5, align 8
  %44 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %45 = call i64 @createCmdTLS(i32* %43, %struct.TYPE_24__* %44, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %46 = icmp slt i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %42
  br label %212

48:                                               ; preds = %42
  br label %49

49:                                               ; preds = %48, %36
  br label %50

50:                                               ; preds = %55, %49
  %51 = load i32*, i32** %5, align 8
  %52 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %53 = call i32 @ftp_RecvCommand(i32* %51, %struct.TYPE_24__* %52, i32* %8, i32* null)
  %54 = icmp eq i32 %53, 1
  br i1 %54, label %55, label %56

55:                                               ; preds = %50
  br label %50

56:                                               ; preds = %50
  %57 = load i32, i32* %8, align 4
  %58 = sdiv i32 %57, 100
  %59 = icmp ne i32 %58, 2
  br i1 %59, label %60, label %67

60:                                               ; preds = %56
  %61 = load i32*, i32** %5, align 8
  %62 = call i32 (i32*, i8*, ...) @msg_Err(i32* %61, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.5, i64 0, i64 0))
  %63 = load i32*, i32** %5, align 8
  %64 = call i32 @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %65 = call i32 @_(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.6, i64 0, i64 0))
  %66 = call i32 @vlc_dialog_display_error(i32* %63, i32 %64, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0), i32 %65)
  br label %212

67:                                               ; preds = %56
  %68 = load i32*, i32** %5, align 8
  %69 = load i32, i32* %8, align 4
  %70 = call i32 @msg_Dbg(i32* %68, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0), i32 %69)
  %71 = load i32*, i32** %5, align 8
  %72 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %73 = call i64 @ftp_SendCommand(i32* %71, %struct.TYPE_24__* %72, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.8, i64 0, i64 0))
  %74 = icmp slt i64 %73, 0
  br i1 %74, label %83, label %75

75:                                               ; preds = %67
  %76 = load i32*, i32** %5, align 8
  %77 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %78 = load i32, i32* @FeaturesCheck, align 4
  %79 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %80 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %79, i32 0, i32 1
  %81 = call i64 @ftp_RecvAnswer(i32* %76, %struct.TYPE_24__* %77, i32* null, i32* null, i32 %78, %struct.TYPE_20__* %80)
  %82 = icmp slt i64 %81, 0
  br i1 %82, label %83, label %86

83:                                               ; preds = %75, %67
  %84 = load i32*, i32** %5, align 8
  %85 = call i32 (i32*, i8*, ...) @msg_Err(i32* %84, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.9, i64 0, i64 0))
  br label %212

86:                                               ; preds = %75
  %87 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %88 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %87, i32 0, i32 0
  %89 = load i64, i64* %88, align 8
  %90 = load i64, i64* @EXPLICIT, align 8
  %91 = icmp eq i64 %89, %90
  br i1 %91, label %92, label %125

92:                                               ; preds = %86
  %93 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %94 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %93, i32 0, i32 1
  %95 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %94, i32 0, i32 0
  %96 = load i32, i32* %95, align 8
  %97 = icmp ne i32 %96, 0
  br i1 %97, label %101, label %98

98:                                               ; preds = %92
  %99 = load i32*, i32** %5, align 8
  %100 = call i32 (i32*, i8*, ...) @msg_Err(i32* %99, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.10, i64 0, i64 0))
  br label %212

101:                                              ; preds = %92
  %102 = load i32*, i32** %5, align 8
  %103 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %104 = call i64 @ftp_SendCommand(i32* %102, %struct.TYPE_24__* %103, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.11, i64 0, i64 0))
  %105 = icmp slt i64 %104, 0
  br i1 %105, label %114, label %106

106:                                              ; preds = %101
  %107 = load i32*, i32** %5, align 8
  %108 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %109 = call i32 @ftp_RecvCommand(i32* %107, %struct.TYPE_24__* %108, i32* %8, i32* null)
  %110 = icmp slt i32 %109, 0
  br i1 %110, label %114, label %111

111:                                              ; preds = %106
  %112 = load i32, i32* %8, align 4
  %113 = icmp ne i32 %112, 234
  br i1 %113, label %114, label %118

114:                                              ; preds = %111, %106, %101
  %115 = load i32*, i32** %5, align 8
  %116 = load i32, i32* %8, align 4
  %117 = call i32 (i32*, i8*, ...) @msg_Err(i32* %115, i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.12, i64 0, i64 0), i32 %116)
  br label %212

118:                                              ; preds = %111
  %119 = load i32*, i32** %5, align 8
  %120 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %121 = call i64 @createCmdTLS(i32* %119, %struct.TYPE_24__* %120, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.13, i64 0, i64 0))
  %122 = icmp slt i64 %121, 0
  br i1 %122, label %123, label %124

123:                                              ; preds = %118
  br label %212

124:                                              ; preds = %118
  br label %125

125:                                              ; preds = %124, %86
  %126 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %127 = getelementptr inbounds %struct.TYPE_24__, %struct.TYPE_24__* %126, i32 0, i32 0
  %128 = load i64, i64* %127, align 8
  %129 = load i64, i64* @NONE, align 8
  %130 = icmp ne i64 %128, %129
  br i1 %130, label %131, label %164

131:                                              ; preds = %125
  %132 = load i32*, i32** %5, align 8
  %133 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %134 = call i64 @ftp_SendCommand(i32* %132, %struct.TYPE_24__* %133, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.14, i64 0, i64 0))
  %135 = icmp slt i64 %134, 0
  br i1 %135, label %144, label %136

136:                                              ; preds = %131
  %137 = load i32*, i32** %5, align 8
  %138 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %139 = call i32 @ftp_RecvCommand(i32* %137, %struct.TYPE_24__* %138, i32* %8, i32* null)
  %140 = icmp slt i32 %139, 0
  br i1 %140, label %144, label %141

141:                                              ; preds = %136
  %142 = load i32, i32* %8, align 4
  %143 = icmp ne i32 %142, 200
  br i1 %143, label %144, label %147

144:                                              ; preds = %141, %136, %131
  %145 = load i32*, i32** %5, align 8
  %146 = call i32 (i32*, i8*, ...) @msg_Err(i32* %145, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.15, i64 0, i64 0))
  br label %212

147:                                              ; preds = %141
  %148 = load i32*, i32** %5, align 8
  %149 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %150 = call i64 @ftp_SendCommand(i32* %148, %struct.TYPE_24__* %149, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.16, i64 0, i64 0))
  %151 = icmp slt i64 %150, 0
  br i1 %151, label %160, label %152

152:                                              ; preds = %147
  %153 = load i32*, i32** %5, align 8
  %154 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %155 = call i32 @ftp_RecvCommand(i32* %153, %struct.TYPE_24__* %154, i32* %8, i32* null)
  %156 = icmp slt i32 %155, 0
  br i1 %156, label %160, label %157

157:                                              ; preds = %152
  %158 = load i32, i32* %8, align 4
  %159 = icmp ne i32 %158, 200
  br i1 %159, label %160, label %163

160:                                              ; preds = %157, %152, %147
  %161 = load i32*, i32** %5, align 8
  %162 = call i32 (i32*, i8*, ...) @msg_Err(i32* %161, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.17, i64 0, i64 0))
  br label %212

163:                                              ; preds = %157
  br label %164

164:                                              ; preds = %163, %125
  %165 = load i8*, i8** %7, align 8
  %166 = call i64 @vlc_UrlParseFixup(%struct.TYPE_22__* %9, i8* %165)
  %167 = icmp ne i64 %166, 0
  br i1 %167, label %168, label %170

168:                                              ; preds = %164
  %169 = call i32 @vlc_UrlClean(%struct.TYPE_22__* %9)
  br label %212

170:                                              ; preds = %164
  %171 = call i32 @vlc_credential_init(%struct.TYPE_23__* %10, %struct.TYPE_22__* %9)
  store i32 0, i32* %11, align 4
  %172 = load i32*, i32** %5, align 8
  %173 = call i64 (%struct.TYPE_23__*, i32*, i8*, i8*, i32, i32, ...) @vlc_credential_get(%struct.TYPE_23__* %10, i32* %172, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.19, i64 0, i64 0), i32 0, i32 0)
  br label %174

174:                                              ; preds = %193, %170
  %175 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %10, i32 0, i32 0
  %176 = load i8*, i8** %175, align 8
  store i8* %176, i8** %12, align 8
  %177 = load i8*, i8** %12, align 8
  %178 = icmp eq i8* %177, null
  br i1 %178, label %179, label %180

179:                                              ; preds = %174
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.20, i64 0, i64 0), i8** %12, align 8
  br label %180

180:                                              ; preds = %179, %174
  %181 = load i32*, i32** %5, align 8
  %182 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %183 = load i8*, i8** %12, align 8
  %184 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %10, i32 0, i32 1
  %185 = load i32, i32* %184, align 8
  %186 = call i64 @LoginUserPwd(i32* %181, %struct.TYPE_24__* %182, i8* %183, i32 %185, i32* %11)
  %187 = icmp ne i64 %186, 0
  br i1 %187, label %191, label %188

188:                                              ; preds = %180
  %189 = load i32, i32* %11, align 4
  %190 = icmp ne i32 %189, 0
  br i1 %190, label %191, label %192

191:                                              ; preds = %188, %180
  br label %201

192:                                              ; preds = %188
  br label %193

193:                                              ; preds = %192
  %194 = load i32*, i32** %5, align 8
  %195 = load i32, i32* @LOGIN_DIALOG_TITLE, align 4
  %196 = load i32, i32* @LOGIN_DIALOG_TEXT, align 4
  %197 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 0
  %198 = load i32, i32* %197, align 4
  %199 = call i64 (%struct.TYPE_23__*, i32*, i8*, i8*, i32, i32, ...) @vlc_credential_get(%struct.TYPE_23__* %10, i32* %194, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.18, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.19, i64 0, i64 0), i32 %195, i32 %196, i32 %198)
  %200 = icmp ne i64 %199, 0
  br i1 %200, label %174, label %201

201:                                              ; preds = %193, %191
  %202 = load i32, i32* %11, align 4
  %203 = icmp ne i32 %202, 0
  br i1 %203, label %204, label %209

204:                                              ; preds = %201
  %205 = load i32*, i32** %5, align 8
  %206 = call i32 @vlc_credential_store(%struct.TYPE_23__* %10, i32* %205)
  %207 = call i32 @vlc_credential_clean(%struct.TYPE_23__* %10)
  %208 = call i32 @vlc_UrlClean(%struct.TYPE_22__* %9)
  store i32 0, i32* %4, align 4
  br label %215

209:                                              ; preds = %201
  %210 = call i32 @vlc_credential_clean(%struct.TYPE_23__* %10)
  %211 = call i32 @vlc_UrlClean(%struct.TYPE_22__* %9)
  br label %212

212:                                              ; preds = %209, %168, %160, %144, %123, %114, %98, %83, %60, %47, %29
  %213 = load %struct.TYPE_24__*, %struct.TYPE_24__** %6, align 8
  %214 = call i32 @clearCmd(%struct.TYPE_24__* %213)
  store i32 -1, i32* %4, align 4
  br label %215

215:                                              ; preds = %212, %204
  %216 = load i32, i32* %4, align 4
  ret i32 %216
}

declare dso_local i32* @vlc_tls_SocketOpenTCP(i32*, i32, i32) #1

declare dso_local i32 @msg_Err(i32*, i8*, ...) #1

declare dso_local i32 @vlc_dialog_display_error(i32*, i32, i8*, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i64 @createCmdTLS(i32*, %struct.TYPE_24__*, i8*) #1

declare dso_local i32 @ftp_RecvCommand(i32*, %struct.TYPE_24__*, i32*, i32*) #1

declare dso_local i32 @msg_Dbg(i32*, i8*, i32) #1

declare dso_local i64 @ftp_SendCommand(i32*, %struct.TYPE_24__*, i8*) #1

declare dso_local i64 @ftp_RecvAnswer(i32*, %struct.TYPE_24__*, i32*, i32*, i32, %struct.TYPE_20__*) #1

declare dso_local i64 @vlc_UrlParseFixup(%struct.TYPE_22__*, i8*) #1

declare dso_local i32 @vlc_UrlClean(%struct.TYPE_22__*) #1

declare dso_local i32 @vlc_credential_init(%struct.TYPE_23__*, %struct.TYPE_22__*) #1

declare dso_local i64 @vlc_credential_get(%struct.TYPE_23__*, i32*, i8*, i8*, i32, i32, ...) #1

declare dso_local i64 @LoginUserPwd(i32*, %struct.TYPE_24__*, i8*, i32, i32*) #1

declare dso_local i32 @vlc_credential_store(%struct.TYPE_23__*, i32*) #1

declare dso_local i32 @vlc_credential_clean(%struct.TYPE_23__*) #1

declare dso_local i32 @clearCmd(%struct.TYPE_24__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
